syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb/post";

service PostService {
    rpc ShowPostReports (ShowPostReportsRequest) returns (ShowPostReportsResponse){}
    rpc GetAllposts (GetAllpostsRequest) returns (GetAllpostsResponse){}
    rpc CheckPostIDByID (CheckPostIDByIDRequest) returns (CheckPostIDByIDResponse){}
    rpc RemovePost (RemovePostRequest) returns (RemovePostResponse){}
}

message ShowPostReportsRequest {
    int64 page = 1;
    int64 count = 2;
}

message ReportPostResponse {
    int64 RepostedUserid = 1;
    int64  postid = 2;
    string Report = 3;
}

message ShowPostReportsResponse{
    repeated ReportPostResponse reports = 1;
}

message GetAllpostsRequest{
    int64 page = 1;
    int64 count = 2;
}

message UserData {
    int64 userid = 1;
    string username = 2;
    string imageurl = 3;
}


message PostResponse {
    int64 id = 1;
    UserData user =2;
    string caption = 3;
    repeated string tag = 4; 
    string url = 5;
    int64 like =6 ;
    int64 comment = 7;
    google.protobuf.Timestamp created_at = 8; 
}

message GetAllpostsResponse{
    repeated PostResponse posts = 1;
}

message CheckPostIDByIDRequest {
    int64 postID = 1;  
}

message CheckPostIDByIDResponse {
    bool exist = 1;
}

message RemovePostRequest {
    int64 postID = 1;
}

message RemovePostResponse {}